--- a/src/waypalm-site/src/main/webapp/static/theme/less/forms.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/forms.less
@@ -1,112 +1,1 @@
-.btn-style(@color: @buttonBackground, @text: @buttonText) {
-    #gradient > .vertical(lighten(@color, 10%),@color);
-    border: none;
-    .box-shadow(2px 2px 0 fade(lighten(@color, 70%), 50%));
-    cursor: pointer;
-    text-decoration: none;
-    font-size: @bodyFontSize;
-    font-weight: bold;
-    line-height: @bodyLineHeight;
-    color: @text;
-    font-family: @bodyFontFamily;
-    padding: .1em .3em;
-    margin: 0;
-    outline: none;
-
-    &:focus,
-    &:hover,
-    &:active,
-    &.focus {
-        outline: none;
-        text-decoration: none;
-        background: lighten(@color, 5%);
-        color: @text;
-    }
-}
-
-.btn-style-disabled(@color: @buttonBackground) {
-    color: transparent;
-    border-color: fade(@color, 80%);
-    background: transparent url(../images/sprites/ani-bar-38x6.gif) no-repeat center center;
-    cursor: wait;
-
-    &:focus,
-    &:hover,
-    &:active,
-    &.focus {
-        background-color: transparent;
-    }
-}
-
-.btn-style-busy(@color: @buttonBackground) {
-    background-image: url(../images/sprites/ani-bar-38x6.gif);
-    background-repeat: no-repeat;
-    background-position: center center;
-    color: transparent;
-
-    &:focus,
-    &:hover,
-    &:active,
-    &.focus {
-        background-image: url(../images/sprites/ani-bar-38x6.gif);
-        background-repeat: no-repeat;
-        background-position: center center;
-        color: transparent;
-    }
-}
-
-form {
-    .formRow {
-        margin: .3em;
-    }
-}
-
-input {
-    padding: .3em;
-    border: solid .1em fade(@inputBorder, 40%);
-    background: none;
-    color: @inputColor;
-
-    &:focus,
-    &.focus {
-        border: solid 1px@inputBorder;
-    }
-}
-
-.full-input-outer {
-    padding-left: .4em;
-    padding-right: .4em;
-    > input,
-    > textarea {
-        width: 100%;
-    }
-    > * {
-        margin-left: -.4em;
-        margin-right: -.4em;
-    }
-}
-
-input[type=submit],
-button,
-a.btn {
-    .btn-style();
-
-    &.btn-green {
-        .btn-style(@buttonGreenBackground);
-    }
-
-    &.btn-small {
-        font-size: 80%;
-        line-height: 80%;
-    }
-
-    &.busy {
-        .btn-style-busy();
-    }
-}
-
-input:disabled, input.disabled,
-button:disabled, button.disabled,
-btn:disabled, btn.disabled {
-    .btn-style-disabled();
-}
+/**/
