--- a/src/waypalm-site/src/main/webapp/static/theme/less/variables.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/variables.less
@@ -1,11 +1,14 @@
-@sansFontFamily: Arial, Helvetica, sans-serif;
+@sansFontFamily: 'Open Sans',sans-serif;
 @serifFontFamily: Georgia,"Times New Roman",Times, serif;
 @monoFontFamily: Monaco,Menlo, Consolas,"Courier New",monospace;
+
+@captionFontFamily: 'Open Sans Condensed', sans-serif;
+@captionColor: #404040;
 
 @bodyFontFamily: @sansFontFamily;
 @bodyFontSize: 1em;
 @bodyLineHeight: 1.2em;
-@bodyTextColor: #111;
+@bodyTextColor: #9A9A9A;
 @bodyBackgroundColor: #ffffff;
 
 @buttonBackground: #333;
