--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/shared/html-head.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/shared/html-head.vm
@@ -3,42 +3,36 @@
 #set($themeRoot="$cp/static/theme")
 #set($libRoot="$themeRoot/lib")
 #set($scriptsRoot="$themeRoot/scripts")
-<head>
-    <meta name="viewport" content="user-scalable=1.0,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="format-detection" content="telephone=no">
+<meta name="viewport" content="user-scalable=1.0,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="format-detection" content="telephone=no">
 
-    <script type="text/javascript">
-        V = {};
-        E = {language:'$eCdn.locale', 'SCE':'#springMessage('E.SCE')'};
-    </script>
-    <script type="text/javascript" src="${libRoot}/head/head-0.96.min.js"></script>
-    <script>
-        head.js(
-                {jquery:"$libRoot/jquery/jquery-1.7.1.min.js"},
-                {jquery_exists:"$libRoot/jquery/jquery.exists.js"},
-                {jquery_form:"$libRoot/jquery/jquery.form-3.18.js"},
-                {jquery_validate:"$libRoot/jquery/jquery.validate-1.10.0.js"},
-                {undescore:"$libRoot/backbone/undescore-1.1.7.min.js"},
-                {backbone:"$libRoot/backbone/backbone-0.5.3.min.js"},
-                {bootstrap_tab:"$libRoot/bootstrap/bootstrap-tab.js"},
-                {waypalm_validate:"$libRoot/waypalm/form-validate.js"},
-                {ui:"$scriptsRoot/ui.js"}
-        );
-    </script>
+<link type="text/css" rel="stylesheet"
+      href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700,300italic&subset=latin,cyrillic-ext,greek-ext,greek,vietnamese,latin-ext,cyrillic"/>
+<link type="text/css" rel="stylesheet"
+      href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic&subset=latin,cyrillic-ext,greek-ext,greek,vietnamese,latin-ext,cyrillic"/>
 
-    #if($eCdn.debugMode)
-        <link rel="stylesheet/less" href="$cp/static/theme/less/layout.less"/>
-        <script type="text/javascript" src="$libRoot/less/less-1.3.0.min.js"></script>
-    #else
-        <link rel="stylesheet" href="$cp/static/theme/dist/waypalm.min.css"/>
-    #end
+<script type="text/javascript">
+    V = {};
+    E = {language:'$eCdn.locale', 'SCE':'#springMessage('E.SCE')'};
+</script>
+<script type="text/javascript" src="${libRoot}/head/head-0.96.min.js"></script>
+<script>
+    head.js(
+            {jquery:"$libRoot/jquery/jquery-1.7.1.min.js"},
+            {jquery_exists:"$libRoot/jquery/jquery.exists.js"},
+            {jquery_form:"$libRoot/jquery/jquery.form-3.18.js"},
+            {jquery_validate:"$libRoot/jquery/jquery.validate-1.10.0.js"},
+            {undescore:"$libRoot/backbone/undescore-1.1.7.min.js"},
+            {backbone:"$libRoot/backbone/backbone-0.5.3.min.js"},
+            {bootstrap_tab:"$libRoot/bootstrap/bootstrap-tab.js"},
+            {ui:"$scriptsRoot/ui.js"}
+    );
+</script>
 
-    #if($eViewMeta.titleKey)
-        <title>#springMessage($eViewMeta.titleKey)</title>
-    #elseif($eViewMeta.title)
-        <title>$eViewMeta.title</title>
-    #else
-        <title>#springMessage('ViewMeta.pageTitle.default')</title>
-    #end
-</head>
+#if($eCdn.debugMode)
+<link rel="stylesheet/less" href="$cp/static/theme/less/layout.less"/>
+<script type="text/javascript" src="$libRoot/less/less-1.3.0.min.js"></script>
+#else
+<link rel="stylesheet" href="$cp/static/theme/dist/waypalm.min.css"/>
+#end
