--- a/src/waypalm-site/src/main/webapp/static/theme/less/icons.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/icons.less
@@ -1,23 +1,1 @@
-[class^="tw-icon-32-"] {
-    display: inline-block;
-    width: 32px;
-    height: 32px;
-    vertical-align: text-top;
-    background-image: url(../images/tokenw/all-32.png);
-    background-position: 32px 32px;
-    background-repeat: no-repeat;
-
-    .ie7-restore-right-whitespace();
-}
-
-.tw-icon-32-catalog {
-    background-position: 0 0;
-}
-
-.ani-bar-38x6 {
-    background: transparent url(../images/sprites/ani-bar-38x6.gif) no-repeat center center;
-
-    &.on-left {
-        background-position: left center;
-    }
-}
+/**/
