--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/shared/html-head.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/shared/html-head.vm
@@ -25,7 +25,8 @@
             {jquery_validate:"$libRoot/jquery/jquery.validate-1.10.0.js"},
             {undescore:"$libRoot/backbone/undescore-1.1.7.min.js"},
             {backbone:"$libRoot/backbone/backbone-0.5.3.min.js"},
-            {bootstrap_tab:"$libRoot/bootstrap/bootstrap-tab.js"},
+            {waypalm_tabs_mini:"$libRoot/waypalm/waypalm.tabs-mini.js"},
+            {defaults:"$scriptsRoot/defaults.js"},
             {ui:"$scriptsRoot/ui.js"}
     );
 </script>
