--- a/src/waypalm-site/src/main/webapp/static/theme/less/variables.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/variables.less
@@ -5,9 +5,11 @@
 @captionFontFamily: 'Open Sans Condensed', sans-serif;
 @captionColor: #404040;
 
+@bodyMenuZ: 500;
+
 @bodyFontFamily: @sansFontFamily;
-@bodyFontSize: 1em;
-@bodyLineHeight: 1.2em;
+@bodyFontSize: 100%;
+@bodyLineHeight: 1;
 @bodyTextColor: #9A9A9A;
 @bodyBackgroundColor: #ffffff;
 
