--- a/src/waypalm-site/src/main/webapp/static/theme/less/variables.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/variables.less
@@ -7,11 +7,10 @@
 
 @bodyMenuZ: 500;
 
-@bodyFontFamily: @sansFontFamily;
-@bodyFontSize: 100%;
-@bodyLineHeight: 1;
-@bodyTextColor: #9A9A9A;
-@bodyBackgroundColor: #ffffff;
+@baseFontFamily: @sansFontFamily;
+@baseFontSize: 16px;
+@baseTextColor: #9A9A9A;
+@baseBackgroundColor: #ffffff;
 
 @buttonBackground: #333;
 @buttonText: #fffffa;
