--- a/src/waypalm-site/src/main/webapp/static/theme/less/reset.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/reset.less
@@ -1,7 +1,7 @@
 body {
-    font-family: @bodyFontFamily;
-    font-size: @bodyFontSize;
-    line-height: @bodyLineHeight;
+    font-family: @baseFontFamily;
+    font-size: @baseFontSize;
+    line-height: 1;
 
     margin: 0;
 }
