--- a/src/waypalm-site/src/main/webapp/static/theme/less/typography.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/typography.less
@@ -10,3 +10,14 @@ h1 {
     font-size: 1.5em;
     line-height: 1.5em;
 }
+
+ol,
+ul {
+    font-size: 0.8em;
+    list-style: circle outside none;
+
+    > li {
+        line-height: 1.6em;
+        margin: 0 0 0.3em 1em;
+    }
+}
