menu options set

--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/avatars.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/avatars.vm
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    $eCdn.setAppZone('/avatars')
 <head>
     #parse('shared/html-head.vm')
     <title>#springMessage('LandingPage.title')</title>
