--- a/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
@@ -54,7 +54,9 @@
     }
 
     .mini-tab-container {
-        *[data-tab] { display: none; }
+        *[data-tab] {
+            display: none;
+        }
     }
 
     &[data-toggle=true] {
@@ -66,3 +68,61 @@
     }
 }
 
+ul.option-selector {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+    > li {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        text-align: left;
+
+        &.current {
+            > a {
+                background-color: #404040;
+                color: #ffffff;
+                text-decoration: none;
+
+                > span {
+                    background-color: #FFFFFF;
+                    color: #000000;
+                }
+            }
+        }
+
+        > a {
+            display: block;
+            padding: 3px 10px;
+            .border-radius(4px);
+            color: #404040;
+            text-decoration: underline;
+            font-size: .9em;
+
+            > span {
+                position: relative;
+                float: right;
+                font-size: .8em;
+                margin-left: 10px;
+                margin-right: -7px;
+                padding: 0 .5em 0 .45em;
+                color: #9A9A9A;
+                background-color: #F5F5F5;
+                text-align: end;
+                .border-radius(4px);
+
+                &:after {
+                    content: "";
+                    position: absolute;
+                    left: -3px;
+                    top: 50%;
+                    width: 3px;
+                    height: 5px;
+                    margin-top: -3px;
+                    background: url(../images/layout/option-list-corn.gif) no-repeat scroll left top transparent;
+                }
+            }
+        }
+    }
+}
