--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/index.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/index.vm
@@ -5,6 +5,7 @@
     <title>#springMessage('LandingPage.title')</title>
 </head>
     #parse('_index-macros.vm')
+    #parse('shared/form-macros.vm')
 <body id="bodyColumns" class="layout-1-4">
 <div class="content">
     <div class="left">
@@ -19,7 +20,32 @@
                         <h1>#springMessage('LandingPage.readyToBegin')</h1>
                         #bodyCommonMenuSelector()
                     </div>
-                    <div id="bodyMenuAccount" data-tab="bodyMenuAccount"></div>
+                    <div id="bodyMenuAccount" data-tab="bodyMenuAccount">
+                        <form method="post" action="$eCdn.contextPath/auth">
+                            <div class="form-field">
+                                #formFieldLabel(true, 'LoginForm.login.label')
+                                <div class="full-width-input">
+                                    <input type="email" name="j_username"
+                                           placeholder="#springMessage('LoginForm.login.placeholder')"/>
+                                </div>
+                            </div>
+                            <div class="form-field">
+                                #formFieldLabel(true, 'LoginForm.password.label')
+                                <div class="full-width-input">
+                                    <input type="password" name="j_password"
+                                           placeholder="#springMessage('LoginForm.password.placeholder')"/>
+                                </div>
+                            </div>
+                            <div class="form-submit clearfix">
+                                <div class="pull-left">
+                                    <input type="submit" value="#springMessage('LoginForm.submit')"/>
+                                </div>
+                                <div class="pull-right">
+                                    #springMessage('form.requiredNotice')
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
