layout in opera

--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/index.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/index.vm
@@ -50,8 +50,7 @@
             </div>
         </div>
     </div>
-    <div class="center">
-    </div>
+    <div class="center"></div>
 </div>
 </body>
 </html>
