--- a/src/waypalm-site/src/main/webapp/static/theme/less/layout.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/layout.less
@@ -22,9 +22,6 @@ body#bodyColumns {
     width: 100%;
 
     > .content {
-        position: absolute;
-        left: 0;
-        top: 0;
         width: 100%;
         height: 100%;
         display: table-row;
@@ -35,6 +32,7 @@ body#bodyColumns {
             min-height: 100%;
             display: table-cell;
             vertical-align: top;
+            width: 0;
         }
     }
 
@@ -54,8 +52,6 @@ body#bodyColumns {
 
     .content-style(@total, @current){
         .set-size(@total, @current);
-        display: block;
-        float: left;
         margin-left: 0;
         margin-right: 0;
         position: relative;
