--- a/src/waypalm-site/src/main/webapp/static/theme/less/layout.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/layout.less
@@ -174,6 +174,7 @@ body#bodyColumns {
                 font-size: 96%;
                 font-family: @captionFontFamily;
                 margin-right: 1em;
+                line-height: 1.3em;
 
                 > a {
                     font-size: 96%;
